@@ -45,6 +45,7 @@ version 2.6.0 (??/??/2009):
 	  the dialog icons, and the Buddy List emblems.
 	* Build properly on Hurd.  (Marc Dequènes)
 	* Various memory leaks fixed as reported by Josh Mueller.
+	* Properly handle an IRC buddy appearing in multiple groups.
 
 	AIM and ICQ:
 	* Preliminary support for a new authentication scheme called
